[package]
name = "anemo-tls"
version = "0.0.0"
license = "Apache-2.0 OR MIT"
authors = [ "Andrew Schran <aschran@mystenlabs.com>" ]
edition = "2021"

[dependencies]
anyhow = "1.0.56"
rustls = { version = "0.21.2", features = ["dangerous_configuration"] }
tokio = { version = "1.17.0", features = ["sync", "rt", "macros", "io-util"] }
tokio-rustls = { version = "0.24.1", features = ["dangerous_configuration"] }